# factorize

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STUDY_PLAN.md
crates/factorize_cli/: Cargo.toml
crates/factorize_cli/src/: main.rs
crates/factorize_core/: Cargo.toml
crates/factorize_core/src/: lib.rs  plugin.rs
crates/factorize_image/: Cargo.toml
crates/factorize_image/examples/: gen.rs
crates/factorize_image/src/: lib.rs  main.rs
crates/factorize_watcher/: Cargo.toml
crates/factorize_watcher/src/: disk_watcher.rs  executor.rs  ignored.rs  lib.rs  paths.rs  scanner.rs  trigger.rs
crates/node_binding/: Cargo.toml  package-lock.json  package.json
crates/node_binding/src/: lib.rs  native_watcher.rs  watcher.rs
crates/task_loop/: Cargo.toml
crates/task_loop/src/: lib.rs
