[package]
name = "factorize_image"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "factorize-img"
path = "src/main.rs"

[dependencies]
image = "0.25"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
factorize_watcher = { path = "../factorize_watcher" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
