[package]
name = "factorize_image"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "factorize-img"
path = "src/main.rs"

[dependencies]
image = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
factorize_watcher = { path = "../factorize_watcher" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
