[package]
name = "factorize_watcher"
version.workspace = true
edition.workspace = true

[dependencies]
globset = "0.4"
notify = { version = "8", features = ["macos_fsevent"] }
regex = "1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
