[package]
name = "factorize_watcher"
version.workspace = true
edition.workspace = true

[dependencies]
globset = { workspace = true }
notify = { workspace = true, features = ["macos_fsevent"] }
regex = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }
