[package]
name = "node_binding"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
factorize_core = { path = "../factorize_core" }
factorize_watcher = { path = "../factorize_watcher" }
napi = { workspace = true, features = ["async", "tokio_rt", "serde-json", "napi9", "compat-mode"] }
napi-derive = { workspace = true, features = ["compat-mode", "type-def"] }

[build-dependencies]
napi-build = { workspace = true }
